fix: add System32 to java.library.path for kernel32.dll